upgrade jar version

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div th:if="${not #lists.isEmpty(workers)}" class="btn-group-sm" id="toolbar" role="group">
         <a class="btn btn-success" onclick="modifyAllWorkerMaximumPoolSize()">
-          <i class="fa fa-edit"></i> 修改全部
+          <i class="fa fa-edit"></i> 修改全部Worker的最大线程数
         </a>
       </div>
 
