--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -111,8 +111,8 @@
           align: 'center',
           formatter: function (value, row, index) {
             const actions = [];
-            actions.push("<a class='btn btn-danger btn-rounded btn-xs'  href='javascript:void(0)' onclick='operate(&quot;REMOVE_WORKER&quot;,    &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-remove'></i> 摘除Worker</a> ");
-            actions.push("<a class='btn btn-warning btn-rounded btn-xs' href='javascript:void(0)' onclick='operate(&quot;CLEAR_TASK_QUEUE&quot;, &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-trash' ></i> 清空任务</a> ");
+            actions.push("<a class='btn btn-danger btn-rounded btn-xs' href='javascript:void(0)' onclick='operate(&quot;REMOVE_WORKER&quot;, &quot;摘除该Worker&quot;, &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-remove'></i> 摘除Worker</a> ");
+            // actions.push("<a class='btn btn-danger btn-rounded btn-xs' href='javascript:void(0)' onclick='operate(&quot;REMOVE_WORKER_AND_CLEAR_TASK_QUEUE&quot;, &quot;摘除该Worker并清空任务队列&quot;, &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-remove' ></i> 摘除Worker并清空任务队列</a> ");
             return '<a tabindex="0" class="btn btn-info btn-rounded btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + actions.join('') + '"><i class="fa fa-chevron-circle-right"></i> 操作</a>';
           }
         }]
@@ -211,7 +211,7 @@
           const input = layero.find('.layui-layer-input');
           const value = input.val().trim();
           if (!/^[A-Za-z0-9.]+:\d+$/g.test(value)) {
-            layer.tips("无效的host:port", input, {tips: 1});
+            layer.tips("无效的`host:port`", input, {tips: 1});
             return;
           }
           const params = {
@@ -232,11 +232,7 @@
       });
     }
 
-    const actionMap = {
-      "REMOVE_WORKER": "摘除该Worker",
-      "CLEAR_TASK_QUEUE": "清空该Worker的任务队列"
-    };
-    function operate(action, workerId, host, port) {
+    function operate(action, msg, workerId, host, port) {
       const params = {
         "group": [[${group}]],
         "workerId": workerId,
@@ -245,7 +241,7 @@
         "action": action,
         "data": null
       };
-      $.modal.confirm("确认要 `" + actionMap[action] + "` 吗？", function () {
+      $.modal.confirm("确认要 `" + msg + "` 吗？", function () {
         $.operate.post(prefix + "/configure_one_worker", params, function (result) {
           if (result.code === 0) {
             location.reload();
