--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -181,7 +181,7 @@
             <li>提供任务分片的能力，重写拆分方法<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/handle/JobSplitter.java">JobHandler#split</a>即可拆分为多个任务，实现分布式任务及并行执行</li>
             <li>支持暂停和取消运行中的任务，已暂停的任务可恢复继续执行，执行失败的任务支持重试</li>
             <li>支持任务保存(Savepoint)其执行状态，让手动或异常暂停的任务能从上一次的执行状态中恢复继续执行</li>
-            <li>任务在执行时若抛出<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/PauseTaskException.java">PauseTaskException</a>，会暂停对应实例下的全部任务(包括分布在不同worker机器中的任务)</li>
+            <li>任务在执行时若抛出<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/PauseTaskException.java">PauseTaskException</a>，会暂停对应任务实例下的全部任务(包括分布在不同worker机器中的任务)</li>
             <li>支持广播任务，广播任务会派发给group下的所有worker执行</li>
             <li>支持Job间的依赖，多个Job配置好依赖关系后便会按既定的依赖顺序依次执行</li>
             <li>支持DAG工作流，可把<code>jobHandler</code>配置为复杂的DAG表达式，如：A-&gt;B,C,(D-&gt;E)-&gt;D,F-&gt;G</li>
@@ -441,7 +441,7 @@
           <ol start="7" dir="auto">
             <li><strong>异常中断</strong></li>
           </ol>
-          <p dir="auto">子任务在执行过程中若抛出框架的<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/PauseTaskException.java">PauseTaskException</a>，则会<code>暂停</code>对应实例下全部的10个子任务(包括派发在不同机器中的任务)。同样如果抛出<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/CancelTaskException.java">CancelTaskException</a>则会<code>取消</code>对应实例下全部的10个子任务。如果抛出其它类型的异常时，只会<code>取消</code>当前子任务，对应实例下其它的子任务不受影响。</p>
+          <p dir="auto">子任务在执行过程中若抛出框架的<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/PauseTaskException.java">PauseTaskException</a>，则会<code>暂停</code>对应任务实例下全部的10个子任务(包括派发在不同机器中的任务)。同样如果抛出<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/CancelTaskException.java">CancelTaskException</a>则会<code>取消</code>对应任务实例下全部的10个子任务。如果抛出其它类型的异常时，只会<code>取消</code>当前子任务，对应任务实例下其它的子任务不受影响。</p>
           <ol start="8" dir="auto">
             <li><strong>任务编排</strong></li>
           </ol>
