--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -105,7 +105,9 @@
       </div>
       <div class="form-group">
         <label class="col-sm-3 control-label">备注：</label>
-        <div class="col-sm-9">[(*{remark})]</div>
+        <div class="col-sm-9">
+          <p class="form-control-static">[(*{remark})]</p>
+        </div>
       </div>
     </form>
   </div>
