--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -85,6 +85,10 @@
           }
         },
         {
+          field: 'version',
+          title: 'Version'
+        },
+        {
           field: 'startupAt',
           title: 'Worker启动时间'
         }]
