--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -120,6 +120,10 @@
           }
         },
         {
+          field: 'version',
+          title: 'Version'
+        },
+        {
           field: 'startupAt',
           title: 'Worker启动时间'
         },
