snowflake worker id

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -131,7 +131,7 @@
     }
 
     function workers(group) {
-      $.modal.popupRight("Worker", prefix + "/worker?group=" + group);
+      $.modal.popupRight(group, prefix + "/worker?group=" + group);
     }
   </script>
 
