--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -195,7 +195,7 @@
     }
 
     function workers(group) {
-      $.modal.popupRight("Worker", prefix + "/worker?group=" + group);
+      $.modal.popupRight(group, prefix + "/worker?group=" + group);
     }
 
     function updateOwnUser(field, row, rowIndex, oldValue) {
