--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -74,6 +74,13 @@
           }
         },
         {
+          field: 'workerContextPath',
+          title: 'Context-path',
+          formatter: function (value, row, index) {
+            return $.table.tooltip(value, 30, "open");
+          }
+        },
+        {
           field: 'ownUser',
           title: '负责人',
           editable: {
