--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
@@ -28,6 +28,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label class="col-xs-2 control-label" style="padding-right: 0;">Ctx-path：</label>
+        <div class="col-xs-10">
+          <input name="workerContextPath" th:field="*{workerContextPath}" class="form-control" type="text" autocomplete="off" />
+        </div>
+      </div>
+      <div class="form-group">
         <label class="col-xs-2 control-label" style="padding-right: 0;">Dev Users：</label>
         <div class="col-xs-10">
           <input type="text" name="devUsers" th:field="*{devUsers}" autocomplete="off" data-role="tagsinput" />
