--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -45,6 +45,10 @@
           }
         },
         {
+          field: 'version',
+          title: 'Version'
+        },
+        {
           field: 'startupAt',
           title: 'Supervisor启动时间'
         }]
