--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -144,6 +144,7 @@
 
     function modifyOneWorkerMaximumPoolSize(field, row, rowIndex, oldValue) {
       if (field !== "maximumPoolSize") {
+        row[field] = oldValue;
         $.modal.msgError("只能更新['maximumPoolSize']字段");
         return;
       }
