--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">执行超时时间(毫秒)：</label>
+        <label class="col-sm-3 control-label">执行超时时间(毫秒)：</label>
         <div class="col-sm-9">
           <p class="form-control-static">[(*{executeTimeout})]</p>
         </div>
