--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -115,6 +115,14 @@
           </select>
         </div>
       </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label is-required">重新发布的执行策略：</label>
+        <div class="col-sm-9">
+          <select name="redeployStrategy" class="form-control m-b" th:with="enum=${@disjobService.enums('RedeployStrategy')}">
+            <option th:each="e : ${enum}" th:text="${e.desc}" th:value="${e.value}" th:field="*{redeployStrategy}"></option>
+          </select>
+        </div>
+      </div>
     </form>
   </div>
 
