--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -39,9 +39,9 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">Job处理器：</label>
+        <label class="col-sm-3 control-label is-required">Job执行器：</label>
         <div class="col-sm-9">
-          <textarea rows="3" name="jobHandler" class="form-control" placeholder="支持：处理器类名、Spring bean name、DAG表达式、源码" required>[(*{jobHandler})]</textarea>
+          <textarea rows="3" name="jobExecutor" class="form-control" placeholder="支持：执行器类名、Spring bean name、DAG表达式、源码" required>[(*{jobExecutor})]</textarea>
         </div>
       </div>
       <div class="form-group">
