rename current server to local server

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -124,7 +124,7 @@
           title: 'Version'
         },
         {
-          field: 'startupAt',
+          field: 'startupTime',
           title: 'Worker启动时间'
         },
         {
