--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -49,7 +49,7 @@
           title: 'Version'
         },
         {
-          field: 'startupAt',
+          field: 'startupTime',
           title: 'Supervisor启动时间'
         }]
       };
