--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -89,7 +89,7 @@
           title: 'Version'
         },
         {
-          field: 'startupAt',
+          field: 'startupTime',
           title: 'Worker启动时间'
         }]
       };
