--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -82,7 +82,7 @@
           </select>
         </div>
         <div class="col-sm-6">
-          <input name="triggerValue" th:field="*{triggerValue}" class="form-control" type="text" autocomplete="off" placeholder="触发器类型对应的值：Cron表达式、时间格式、固定周期json格式串、父jobId等" required />
+          <input name="triggerValue" th:field="*{triggerValue}" class="form-control" type="text" autocomplete="off" placeholder="触发器类型对应的值：Cron表达式、指定时间、固定频率、固定延时、父jobId等" required />
         </div>
       </div>
       <div class="form-group">
